discord-frontend/hartex-discord-entitycache-test/tests/ui/expected_id.stderr
error: expected `id`; found `not_id`
  --> tests/ui/expected_id.rs:27:14
   |
27 |     #[entity(not_id)]
   |              ^^^^^^
